# rx86

./: .gitignore  Cargo.toml  README.md  build.rs  codegolf-objdump.txt  reference_output.txt
instruction_test_generator/: Cargo.toml
instruction_test_generator/src/: lib.rs  test_generator.rs
src/: bits.rs  cpu.rs  instructions.rs  lib.rs  main.rs  memory.rs  operations.rs  traits.rs  upcast.rs
tests/: instructions.rs
tests/instructions_cases/: F5.json  F8.json  F9.json  FA.json  FB.json  FC.json  FD.json  LICENSE  README.md
