[package]
name = "rx86"
version = "0.1.0"
authors = ["Blair Urish <burace17@gmail.com>"]
edition = "2024"

[dependencies]
bitflags = "2.9.0"
num-conv = "=0.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
serde_json = "1.0"
test-log = { version = "0.2.17", features = ["trace"]}

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]
